--- a/timeline/package.json
+++ b/timeline/package.json
@@ -5,12 +5,24 @@
   "private": true,
   "dependencies": {
     "@nativescript/core": "~8.6.0",
-    "@nativescript/theme": "~3.0.2"
+    "@nativescript/theme": "~3.0.2",
+    "@nativescript/unit-test-runner": "^3.0.4"
   },
   "devDependencies": {
+    "@jsdevtools/coverage-istanbul-loader": "3.0.5",
     "@nativescript/android": "8.6.2",
     "@nativescript/types": "~8.6.0",
     "@nativescript/webpack": "~5.0.18",
+    "@types/karma-chai": "0.1.6",
+    "@types/mocha": "10.0.6",
+    "chai": "5.1.0",
+    "karma": "6.4.2",
+    "karma-chai": "0.1.0",
+    "karma-coverage": "2.2.1",
+    "karma-mocha": "2.0.1",
+    "karma-nativescript-launcher": "0.4.0",
+    "mocha": "10.2.0",
+    "nyc": "15.1.0",
     "typescript": "~5.2.0"
   }
 }
