--- a/timeline/package.json
+++ b/timeline/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@nativescript/core": "~8.6.0",
     "@nativescript/theme": "~3.0.2",
-    "@nativescript/unit-test-runner": "^3.0.4"
+    "@nativescript/unit-test-runner": "^3.0.4",
+    "nativescript": "^8.6.5"
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
